# pyri-device-manager

./: README.md  pyproject.toml  setup.py
src/pyri/device_manager/: __main__.py  device_manager.py  pyri_device_manager_default_info.yml  robdef.py  service_node_launch.py  tech.pyri.device_manager.robdef
