[project]

name = "pyri-device-manager"
version = "0.1.0"
description = "PyRI Teach Pendant Device Manager"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pyodide", "pyri-project", "pyri-runtime-package", "robotics"]
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    'pyri-common',
    'robotraconteur'       
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]

[project.urls]
homepage="http://pyri.tech"
repository="https://github.com/pyri-project/pyri-device-manager"

[project.scripts]
pyri-device-manager-service = "pyri.device_manager.__main__:main"

[project.entry-points."pyri.plugins.robdef"]
pyri-device-manager-robdef = "pyri.device_manager.robdef:get_robdef_factory"

[project.entry-points."pyri.plugins.service_node_launch"]
pyri-device-manager-launch = "pyri.device_manager.service_node_launch:get_service_node_launch_factory"

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]